force-app/main/default/objects/Opportunity/fields/Account_Manager_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Manager_Name__c</fullName>
    <formula>FSP_Sales_Rep__r.FirstName + &quot; &quot; + FSP_Sales_Rep__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Manager Name</label>
    <type>Text</type>
</CustomField>