force-app/main/default/objects/Opportunity/fields/ACDF_Branch_Office__c.field-meta.xml
<CustomField>
    <fullName>ACDF_Branch_Office__c</fullName>
    <formula>Contact__r.ACDF_Branch_Office__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ACDF Branch Office</label>
    <type>Text</type>
</CustomField>