force-app/main/default/objects/Opportunity/fields/ACDF_City_of_Focus__c.field-meta.xml
<CustomField>
    <fullName>ACDF_City_of_Focus__c</fullName>
    <formula>(Contact__r.ACDF_City_of_Focus__c)</formula>
    <label>ACDF City of Focus</label>
    <type>Text</type>
</CustomField>