force-app/main/default/objects/Opportunity/fields/ACDF_Company__c.field-meta.xml
<CustomField>
    <fullName>ACDF_Company__c</fullName>
    <formula>Account.ACDF_Company__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ACDF Company</label>
    <type>Text</type>
</CustomField>