force-app/main/default/objects/Opportunity/fields/ACDF_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>ACDF_Completed_Date__c</fullName>
    <label>ACDF Completed Date</label>
    <type>Date</type>
</CustomField>