force-app/main/default/objects/Opportunity/fields/ACDF_Error_Passcode__c.field-meta.xml
<CustomField>
    <fullName>ACDF_Error_Passcode__c</fullName>
    <formula>&quot;https://fivestarprofessional.tfaforms.net/29?=&quot; &amp;  URL_ID_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ACDF Error Passcode</label>
    <type>Text</type>
</CustomField>