force-app/main/default/objects/Opportunity/fields/ACDF_Fname__c.field-meta.xml
<CustomField>
    <fullName>ACDF_Fname__c</fullName>
    <formula>(Contact__r.ACDF_FName__c)</formula>
    <label>ACDF Fname</label>
    <type>Text</type>
</CustomField>