force-app/main/default/objects/Opportunity/fields/ACDF_Form_Complete__c.field-meta.xml
<CustomField>
    <fullName>ACDF_Form_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Completed ACDF Form</label>
    <type>Checkbox</type>
</CustomField>