force-app/main/default/objects/Opportunity/fields/ACDF_Lic_Num__c.field-meta.xml
<CustomField>
    <fullName>ACDF_Lic_Num__c</fullName>
    <formula>(Contact__r.ACDF_Lic_Num__c)</formula>
    <label>ACDF Lic Num</label>
    <type>Text</type>
</CustomField>