force-app/main/default/objects/Opportunity/fields/ACDF_Lic_Type__c.field-meta.xml
<CustomField>
    <fullName>ACDF_Lic_Type__c</fullName>
    <formula>TEXT( Account.ACDF_Lic_Type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ACDF Lic Type</label>
    <type>Text</type>
</CustomField>