force-app/main/default/objects/Opportunity/fields/ACDF_Lite__c.field-meta.xml
<CustomField>
    <fullName>ACDF_Lite__c</fullName>
    <formula>Market_Project__r.ACDF_Lite__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ACDF Lite</label>
    <type>Checkbox</type>
</CustomField>