force-app/main/default/objects/Opportunity/fields/ACDF_Lname__c.field-meta.xml
<CustomField>
    <fullName>ACDF_Lname__c</fullName>
    <formula>(Contact__r.ACDF_LName__c)</formula>
    <label>ACDF Lname</label>
    <type>Text</type>
</CustomField>