force-app/main/default/objects/Opportunity/fields/ACDF_LPL__c.field-meta.xml
<CustomField>
    <fullName>ACDF_LPL__c</fullName>
    <description>The completed candidate form for the LPL Advisor, Links to Response IDs will be located on the 23.253.174.20 server in the fsp_prod folder in the fsp_lpl folder. https://www.fivestarprofessional.com/fsp_lpl/ will be the first part of all URLS and the pdf name will be the second part. Full URL example https://www.fivestarprofessional.com/fsp_lpl/PDFResponse-07632.pdf</description>
    <inlineHelpText>Talk to Debbie Noll and Brianna LOL</inlineHelpText>
    <label>ACDF LPL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>