force-app/main/default/objects/Opportunity/fields/ACDF_Parent_Company__c.field-meta.xml
<CustomField>
    <fullName>ACDF_Parent_Company__c</fullName>
    <formula>Contact__r.ACDF_Parent_Company__c</formula>
    <label>ACDF Parent Company</label>
    <type>Text</type>
</CustomField>