force-app/main/default/objects/Opportunity/fields/ACDF_Portal_Link__c.field-meta.xml
<CustomField>
    <fullName>ACDF_Portal_Link__c</fullName>
    <formula>&quot;http://fivestarprofessional.tfaforms.net/28?idcode=&quot; &amp;  URL_ID_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ACDF Portal Link</label>
    <type>Text</type>
</CustomField>