force-app/main/default/objects/Opportunity/fields/ACDF_Primary__c.field-meta.xml
<CustomField>
    <fullName>ACDF_Primary__c</fullName>
    <formula>TEXT(Contact__r.ACDF_Primary_Service__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ACDF Primary</label>
    <type>Text</type>
</CustomField>