force-app/main/default/objects/Opportunity/fields/ACDF_Purchase_Interest__c.field-meta.xml
<CustomField>
    <fullName>ACDF_Purchase_Interest__c</fullName>
    <formula>TEXT(Account.ACDF_Purchase_Interest__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ACDF Purchase Interest</label>
    <type>Text</type>
</CustomField>