force-app/main/default/objects/Opportunity/fields/ACDF_Return_Date__c.field-meta.xml
<CustomField>
    <fullName>ACDF_Return_Date__c</fullName>
    <formula>Account.ACT_ACDF_Return_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ACDF Return Date</label>
    <type>Date</type>
</CustomField>