force-app/main/default/objects/Opportunity/fields/ACDF_Submission_Method__c.field-meta.xml
<CustomField>
    <fullName>ACDF_Submission_Method__c</fullName>
    <label>Submission Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>