force-app/main/default/objects/Opportunity/fields/ACDF_Title__c.field-meta.xml
<CustomField>
    <fullName>ACDF_Title__c</fullName>
    <formula>Account.hidden_title_for_Opportunity_formula__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ACDF Title</label>
    <type>Text</type>
</CustomField>