force-app/main/default/objects/Opportunity/fields/ACDF_Years_Active__c.field-meta.xml
<CustomField>
    <fullName>ACDF_Years_Active__c</fullName>
    <formula>Contact__r.ACDF_Years_Active__c</formula>
    <label>ACDF Years Active</label>
    <type>Text</type>
</CustomField>