force-app/main/default/objects/Opportunity/fields/ACT_Created_By__c.field-meta.xml
<CustomField>
    <fullName>ACT_Created_By__c</fullName>
    <description>This is the name of the person who created this historical opportunity in ACT.</description>
    <inlineHelpText>This is the name of the person who created this historical opportunity in ACT.</inlineHelpText>
    <label>ACT Created By</label>
    <length>50</length>
    <type>Text</type>
</CustomField>