force-app/main/default/objects/Opportunity/fields/ACT_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>ACT_Created_Date__c</fullName>
    <description>This is the date that this historical opportunity was created in ACT.</description>
    <inlineHelpText>This is the date that this historical opportunity was created in ACT.</inlineHelpText>
    <label>ACT Created Date</label>
    <type>Date</type>
</CustomField>