force-app/main/default/objects/Opportunity/fields/ACT_Disposition_Status__c.field-meta.xml
<CustomField>
    <fullName>ACT_Disposition_Status__c</fullName>
    <formula>TEXT(Account.ACT_Disposition_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ACT Disposition Status</label>
    <type>Text</type>
</CustomField>