force-app/main/default/objects/Opportunity/fields/ACT_Edit_Date__c.field-meta.xml
<CustomField>
    <fullName>ACT_Edit_Date__c</fullName>
    <description>This is the last edit date of this Opportunity in ACT.</description>
    <inlineHelpText>This is the last edit date of this Opportunity in ACT.</inlineHelpText>
    <label>ACT Edit Date</label>
    <type>Date</type>
</CustomField>