force-app/main/default/objects/Opportunity/fields/ACT_Edited_By__c.field-meta.xml
<CustomField>
    <fullName>ACT_Edited_By__c</fullName>
    <description>This is the name of the last person to edit this Opportunity in ACT.</description>
    <inlineHelpText>This is the name of the last person to edit this Opportunity in ACT.</inlineHelpText>
    <label>ACT Edited By</label>
    <length>50</length>
    <type>Text</type>
</CustomField>