force-app/main/default/objects/Opportunity/fields/ACT_FSP_Sales_Rep_2012__c.field-meta.xml
<CustomField>
    <fullName>ACT_FSP_Sales_Rep_2012__c</fullName>
    <formula>Account.ACT_FSP_Sales_Rep_LY__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ACT FSP Sales Rep 2012</label>
    <type>Text</type>
</CustomField>