force-app/main/default/objects/Opportunity/fields/ACT_FSP_Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>ACT_FSP_Sales_Rep__c</fullName>
    <label>ACT FSP Sales Rep</label>
    <length>50</length>
    <type>Text</type>
</CustomField>