force-app/main/default/objects/Opportunity/fields/ACT_Open_Date__c.field-meta.xml
<CustomField>
    <fullName>ACT_Open_Date__c</fullName>
    <label>ACT Open Date</label>
    <type>Date</type>
</CustomField>