force-app/main/default/objects/Opportunity/fields/ACTGross_Margin_Amount__c.field-meta.xml
<CustomField>
    <fullName>ACTGross_Margin_Amount__c</fullName>
    <label>ACT Gross Margin Amount</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>