force-app/main/default/objects/Opportunity/fields/Activities_Completed__c.field-meta.xml
<CustomField>
    <fullName>Activities_Completed__c</fullName>
    <label>Activities Completed</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>