force-app/main/default/objects/Opportunity/fields/Additional_Transaction_Goal__c.field-meta.xml
<CustomField>
    <fullName>Additional_Transaction_Goal__c</fullName>
    <label>Additional Transaction Goal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>