force-app/main/default/objects/Opportunity/fields/Advance_Research_Call__c.field-meta.xml
<CustomField>
    <fullName>Advance_Research_Call__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to trigger research call advance workflow</description>
    <label>Advance Research Call</label>
    <type>Checkbox</type>
</CustomField>