force-app/main/default/objects/Opportunity/fields/Advanced_Segmentation__c.field-meta.xml
<CustomField>
    <fullName>Advanced_Segmentation__c</fullName>
    <label>Advanced Segmentation</label>
    <length>3</length>
    <type>Text</type>
</CustomField>