force-app/main/default/objects/Opportunity/fields/AG_link_no_price_MS__c.field-meta.xml
<CustomField>
    <fullName>AG_link_no_price_MS__c</fullName>
    <formula>Market_Project__r.AG_link_no_price_MS__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AG link no price (MS)</label>
    <type>Text</type>
</CustomField>