force-app/main/default/objects/Opportunity/fields/Alt_Media_Interest__c.field-meta.xml
<CustomField>
    <fullName>Alt_Media_Interest__c</fullName>
    <label>Alt Media Interest</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Forbes</fullName>
            </value>
            <value>
                <fullName>WSJ</fullName>
            </value>
            <value>
                <fullName>WIW</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>