force-app/main/default/objects/Opportunity/fields/Alternative_Segment__c.field-meta.xml
<CustomField>
    <fullName>Alternative_Segment__c</fullName>
    <label>Alternative Segment</label>
    <length>25</length>
    <type>Text</type>
</CustomField>