force-app/main/default/objects/Opportunity/fields/AM_ELM_Follow_Up_Link__c.field-meta.xml
<CustomField>
    <fullName>AM_ELM_Follow_Up_Link__c</fullName>
    <formula>&quot;http://fivestarprofessional.force.com/SelfScheduling/forcebrain__LeadRegistration?ProcessId=a2Z6T000006FwZqUAK&amp;ContactID=&quot;+ Contact_SF_ID__c+&quot;&amp;PID=&quot;+  Contact__r.Owner.Provider_ID__c +&quot;&amp;OBJ1FID=Opportunity__c&amp;OBJ1Id=&quot;&amp;Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AM ELM Follow Up Link</label>
    <type>Text</type>
</CustomField>