force-app/main/default/objects/Opportunity/fields/AM_Follow_Up_Link__c.field-meta.xml
<CustomField>
    <fullName>AM_Follow_Up_Link__c</fullName>
    <formula>&quot;https://fivestarprofessional-experience.force.com/s/onlinescheduler?processId=a5F6T0000030J56UAE&amp;whoId=&quot;+ OwnerId +&quot;&amp;clientId=&quot;+Contact_SF_ID__c+&quot;&amp;relatedId=&quot;+Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AM Follow Up Link</label>
    <type>Text</type>
</CustomField>