force-app/main/default/objects/Opportunity/fields/AM_WMIP_Wild_Card_Certification_Link__c.field-meta.xml
<CustomField>
    <fullName>AM_WMIP_Wild_Card_Certification_Link__c</fullName>
    <description>Used for AM Wild Card Certification Appointment</description>
    <formula>&quot;http://fivestarprofessional.force.com/SelfScheduling/forcebrain__LeadRegistration?ProcessId=a2Z6T000006Df3HUAS&amp;ContactID=&quot;+ Contact_SF_ID__c/*+&quot;&amp;PID=&quot;*/+&quot;&amp;OBJ1FID=Opportunity__c&amp;OBJ1Id=&quot;&amp;Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Use this to see all available calendar openings for all AMs whom sell WM/IP.</inlineHelpText>
    <label>Wealth Mgmt/IP WildCard Cert Link</label>
    <type>Text</type>
</CustomField>