force-app/main/default/objects/Opportunity/fields/amreg_code__c.field-meta.xml
<CustomField>
    <fullName>amreg_code__c</fullName>
    <label>amreg code</label>
    <length>25</length>
    <type>Text</type>
</CustomField>