force-app/main/default/objects/Opportunity/fields/AmReg_Stage__c.field-meta.xml
<CustomField>
    <fullName>AmReg_Stage__c</fullName>
    <label>AmReg Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Test</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>