force-app/main/default/objects/Opportunity/fields/Assistant_Name__c.field-meta.xml
<CustomField>
    <fullName>Assistant_Name__c</fullName>
    <formula>Contact__r.AssistantName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Name of Assistant</inlineHelpText>
    <label>Assistant Name</label>
    <type>Text</type>
</CustomField>