force-app/main/default/objects/Opportunity/fields/Asst_Email__c.field-meta.xml
<CustomField>
    <fullName>Asst_Email__c</fullName>
    <label>Asst Email</label>
    <type>Email</type>
</CustomField>