force-app/main/default/objects/Opportunity/fields/asst_email_formula__c.field-meta.xml
<CustomField>
    <fullName>asst_email_formula__c</fullName>
    <formula>Contact__r.Assistant_Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>asst email formula</label>
    <type>Text</type>
</CustomField>