force-app/main/default/objects/Opportunity/fields/Asst_Ext__c.field-meta.xml
<CustomField>
    <fullName>Asst_Ext__c</fullName>
    <label>Asst Ext</label>
    <length>10</length>
    <type>Text</type>
</CustomField>