force-app/main/default/objects/Opportunity/fields/asst_ext_formula__c.field-meta.xml
<CustomField>
    <fullName>asst_ext_formula__c</fullName>
    <formula>Contact__r.Assistant_Extension__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>asst ext formula</label>
    <type>Text</type>
</CustomField>