force-app/main/default/objects/Opportunity/fields/Asst_Name__c.field-meta.xml
<CustomField>
    <fullName>Asst_Name__c</fullName>
    <label>Asst Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>