force-app/main/default/objects/Opportunity/fields/Asst_name_formula__c.field-meta.xml
<CustomField>
    <fullName>Asst_name_formula__c</fullName>
    <formula>Contact__r.Assistant__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Asst name formula</label>
    <type>Text</type>
</CustomField>