force-app/main/default/objects/Opportunity/fields/Asst_Phone__c.field-meta.xml
<CustomField>
    <fullName>Asst_Phone__c</fullName>
    <label>Asst Phone</label>
    <type>Phone</type>
</CustomField>