force-app/main/default/objects/Opportunity/fields/asst_phone_formula__c.field-meta.xml
<CustomField>
    <fullName>asst_phone_formula__c</fullName>
    <formula>Contact__r.Assistant_Phone__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>asst phone formula</label>
    <type>Text</type>
</CustomField>