force-app/main/default/objects/Opportunity/fields/Average_Transaction_Value__c.field-meta.xml
<CustomField>
    <fullName>Average_Transaction_Value__c</fullName>
    <label>Average Transaction Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>