force-app/main/default/objects/Opportunity/fields/Award_Area__c.field-meta.xml
<CustomField>
    <fullName>Award_Area__c</fullName>
    <formula>Market_Project__r.Award_Area__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Award Area</label>
    <type>Text</type>
</CustomField>