force-app/main/default/objects/Opportunity/fields/Award_Promotion_Reasons__c.field-meta.xml
<CustomField>
    <fullName>Award_Promotion_Reasons__c</fullName>
    <label>Award Promotion Reasons</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Product</fullName>
            </value>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Value</fullName>
            </value>
            <value>
                <fullName>Time</fullName>
            </value>
            <value>
                <fullName>DIY</fullName>
            </value>
            <value>
                <fullName>Group Influence</fullName>
            </value>
            <value>
                <fullName>Research</fullName>
            </value>
            <value>
                <fullName>Mag Ad</fullName>
            </value>
            <value>
                <fullName>No Biz Dev</fullName>
            </value>
            <value>
                <fullName>Didn&apos;t Work</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>