force-app/main/default/objects/Opportunity/fields/Awareness__c.field-meta.xml
<CustomField>
    <fullName>Awareness__c</fullName>
    <description>Rank - 1 thru 4</description>
    <inlineHelpText>Rank - 1 thru 4</inlineHelpText>
    <label>Awareness</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>