force-app/main/default/objects/Opportunity/fields/Barron_s__c.field-meta.xml
<CustomField>
    <fullName>Barron_s__c</fullName>
    <defaultValue>false</defaultValue>
    <description>On Barron&apos;s list</description>
    <label>Barron&apos;s (Forbes)</label>
    <type>Checkbox</type>
</CustomField>