force-app/main/default/objects/Opportunity/fields/BDR_Follow_Up__c.field-meta.xml
<CustomField>
    <fullName>BDR_Follow_Up__c</fullName>
    <formula>IF(
AND($User.Salesforce_ID__c &lt;&gt; &quot;0050W000006qj5vQAA&quot;,$User.Salesforce_ID__c &lt;&gt; &quot;0050W000006U3JAQA0&quot;),
&quot;http://fivestarprofessional.force.com/SelfScheduling/forcebrain__LeadRegistration?ProcessId=a2Z6T000006Df8sUAC&amp;ContactID=&quot;+ Contact_SF_ID__c+&quot;&amp;PID=&quot;+  Contact__r.Owner.Provider_ID__c +&quot;&amp;OBJ1FID=Opportunity__c&amp;OBJ1Id=&quot;&amp;Id,
&quot;CEP: https://fivestarprofessional-experience.force.com/s/onlinescheduler?processId=a5F6T0000030K6VUAU&amp;whoId=&quot;+ OwnerId +&quot;&amp;clientId=&quot;+Id +&quot; &quot;+br()+br()+
&quot;v5: http://fivestarprofessional.force.com/SelfScheduling/forcebrain__LeadRegistration?ProcessId=a2Z6T000006Df8sUAC&amp;ContactID=&quot;+ Contact_SF_ID__c+&quot;&amp;PID=&quot;+  Contact__r.Owner.Provider_ID__c +&quot;&amp;OBJ1FID=Opportunity__c&amp;OBJ1Id=&quot;&amp;Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BDR Follow Up Link</label>
    <type>Text</type>
</CustomField>