force-app/main/default/objects/Opportunity/fields/BLITZ__c.field-meta.xml
<CustomField>
    <fullName>BLITZ__c</fullName>
    <label>BLITZ</label>
    <length>250</length>
    <type>Text</type>
</CustomField>