force-app/main/default/objects/Opportunity/fields/Blue_Ribbon_Panel_Participant__c.field-meta.xml
<CustomField>
    <fullName>Blue_Ribbon_Panel_Participant__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Blue Ribbon Panel Participant</label>
    <type>Checkbox</type>
</CustomField>