force-app/main/default/objects/Opportunity/fields/Branch_Office_aka_Company__c.field-meta.xml
<CustomField>
    <fullName>Branch_Office_aka_Company__c</fullName>
    <formula>Contact__r.ACDF_Branch_Office__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Branch Office aka Company</label>
    <type>Text</type>
</CustomField>