force-app/main/default/objects/Opportunity/fields/Broker_Dealer__c.field-meta.xml
<CustomField>
    <fullName>Broker_Dealer__c</fullName>
    <formula>Account.Broker_Dealer__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Broker Dealer</label>
    <type>Text</type>
</CustomField>