force-app/main/default/objects/Opportunity/fields/Bronze_Notes__c.field-meta.xml
<CustomField>
    <fullName>Bronze_Notes__c</fullName>
    <label>Bronze_Notes</label>
    <type>TextArea</type>
</CustomField>