force-app/main/default/objects/Opportunity/fields/Business_Dev_Rep__c.field-meta.xml
<CustomField>
    <fullName>Business_Dev_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>BDR assigned to the client for Pre-Winner calls</description>
    <label>Business Development Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities3</relationshipName>
    <type>Lookup</type>
</CustomField>