force-app/main/default/objects/Opportunity/fields/Business_Objectives__c.field-meta.xml
<CustomField>
    <fullName>Business_Objectives__c</fullName>
    <label>Business Objectives</label>
    <length>1</length>
    <type>Text</type>
</CustomField>