force-app/main/default/objects/Opportunity/fields/Buyer_Likelihood__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Likelihood__c</fullName>
    <label>Buyer Likelihood</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1 - Said they will not buy</fullName>
            </value>
            <value>
                <fullName>2 - Unlikely to buy</fullName>
            </value>
            <value>
                <fullName>3 - Unknown</fullName>
            </value>
            <value>
                <fullName>4 - Likely open to buy</fullName>
            </value>
            <value>
                <fullName>5 - Said they will buy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>