force-app/main/default/objects/Opportunity/fields/Buyer_Likelihood_Commends__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Likelihood_Commends__c</fullName>
    <label>Buyer Likelihood Commends</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>