force-app/main/default/objects/Opportunity/fields/Buyer_Usage_Survey__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Usage_Survey__c</fullName>
    <label>Buyer Usage Survey</label>
    <type>Url</type>
</CustomField>