force-app/main/default/objects/Opportunity/fields/Call_Assistant__c.field-meta.xml
<CustomField>
    <fullName>Call_Assistant__c</fullName>
    <formula>Contact__r.Call_Assistant__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Call assistant first if this box is checked</inlineHelpText>
    <label>Call Assistant</label>
    <type>Checkbox</type>
</CustomField>