force-app/main/default/objects/Opportunity/fields/Call_Count__c.field-meta.xml
<CustomField>
    <fullName>Call_Count__c</fullName>
    <description>Filled by roll up helper</description>
    <label>Call Count</label>
    <length>3</length>
    <type>Text</type>
</CustomField>