force-app/main/default/objects/Opportunity/fields/Call_Counter_Test__c.field-meta.xml
<CustomField>
    <fullName>Call_Counter_Test__c</fullName>
    <label>Call Counter Test</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>