force-app/main/default/objects/Opportunity/fields/Call_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Call_Due_Date__c</fullName>
    <label>Call Due Date</label>
    <type>Date</type>
</CustomField>