force-app/main/default/objects/Opportunity/fields/Candidate_Guide_Completed__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Guide_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Candidate Guide Completed</label>
    <type>Checkbox</type>
</CustomField>