force-app/main/default/objects/Opportunity/fields/Candidate_Guide_Opened__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Guide_Opened__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Jonathan is anal</description>
    <label>Candidate Guide Opened</label>
    <type>Checkbox</type>
</CustomField>